--- a/android/build.gradle
+++ b/android/build.gradle
@@ -67,7 +67,7 @@ if (flutterRoot == null) {
     throw new GradleException("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")
 }
 dependencies {
-    implementation fileTree(dir: 'G:\\flutter_project\\plugins\\rfid_sdk\\android-api\\lib', include: ['*.aar', '*.jar'], exclude: [])
+    //implementation fileTree(dir: 'G:\\flutter_project\\plugins\\rfid_sdk\\android-api\\lib', include: ['*.aar', '*.jar'], exclude: [])
 //    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation files('libs\\reader.jar')
     compileOnly files("$flutterRoot/bin/cache/artifacts/engine/android-arm/flutter.jar")
